<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:padding="@dimen/dp_16">

    <TextView
        android:id="@+id/textLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxLight" />

    <CheckBox
        android:id="@+id/checkBoxLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/dp_8"
        app:layout_constraintStart_toEndOf="@+id/textLight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxDark" />

    <CheckBox
        android:id="@+id/checkBoxDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxLight"
        app:layout_constraintStart_toStartOf="@+id/checkBoxLight"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxLight" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_bright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxDark"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxDark" />
</androidx.constraintlayout.widget.ConstraintLayout>
